# vcpkg-cpack

./: CMakeLists.txt  LICENSE  README.md  README_old.md  addPathsToEnvVariables.ps1  removePathsFromEnvVariables.ps1  silent-install.qs  update-env-variables.qs  update-env-variables.qs.in
examples/: robotology-additional-dependencies-x64.cmake
